--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prisma": "^4.9.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
+    "@prisma/client": "^4.9.0",
     "fastify": "^4.11.0"
   }
 }
